<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editprofile"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editusername"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/gender"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbtneditmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnmale" />

        <RadioButton
            android:id="@+id/rbtneditfemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnfemale" />
    </RadioGroup>

    <Button
        android:id="@+id/btnuadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnedit" />

    <Button
        android:id="@+id/btnuserupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btndelete" />

</LinearLayout>