<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".profileManagement">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userregistration"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date" />

    <EditText
        android:id="@+id/edittxtuserPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbtnmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnmale" />

        <RadioButton
            android:id="@+id/rbtnfemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnfemale" />
    </RadioGroup>

    <Button
        android:id="@+id/btnadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnadd" />

    <Button
        android:id="@+id/btnupdateuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnupdateprofile" />

</LinearLayout>